--- a/5_Site/Versione 2 (Con utenti specifici)/index.css
+++ b/5_Site/Versione 2 (Con utenti specifici)/index.css
@@ -1,3 +1,7 @@
+body{
+    font-family: Verdana
+}
+
 #chat-container {
     width: 300px;
     margin: 0 auto;
@@ -12,14 +16,16 @@
 }
 
 input, button {
-    width: 100%;
+    width: 200px;
     padding: 10px;
     margin-bottom: 5px;
 }
 
 button {
-    background-color: #4CAF50;
+    background-color: #069AF3;
     color: white;
     border: none;
+    border-radius: 10px;
     cursor: pointer;
+    width: 200px;
 }
