--- a/5_Site/style/index.css
+++ b/5_Site/style/index.css
@@ -92,7 +92,7 @@ button:hover{
 }
 
 #invia, #immagineAspetto{
-    width: 65px;
+    width: 40px;
     height: 40px;
 }
 
@@ -119,6 +119,15 @@ button:hover{
     border-radius: 50px;
     padding: 50px;
     border: 1px solid black;
+}
+
+#filter-chat{
+    width: 30vw;
+}
+
+#filter-box{
+    margin-top: 35px;
+    margin-left: 30vw;
 }
 
 /* Scrollbar */
