--- a/5_Site/style/index.css
+++ b/5_Site/style/index.css
@@ -134,18 +134,18 @@ button:hover{
 
 ::-webkit-scrollbar {
     width: 20px;
-  }
+}
   
 ::-webkit-scrollbar-track {
-box-shadow: inset 0 0 5px grey; 
-border-radius: 10px;
+    box-shadow: inset 1px 5px 10px grey;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-border-radius: 10px;
-background: #4CAF50;
+    border-radius: 10px;
+    background: #4CAF50;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-background: #246426; 
+    background: #246426;
 }
